v0.69.0/reference/cli/pixi/workspace/export/conda-environment/index.md
# [pixi](../../../) [workspace](../../) [export](../) conda-environment

Export workspace environment to a conda environment.yaml file

## Usage

```text
pixi workspace export conda-environment [OPTIONS] [OUTPUT_PATH]
```

## Arguments

- [`<OUTPUT_PATH>`](#arg-%3COUTPUT_PATH%3E) : Explicit path to export the environment file to

## Options

- [`--platform (-p) <PLATFORM>`](#arg---platform) : The platform to render the environment file for. Defaults to the current platform
- [`--environment (-e) <ENVIRONMENT>`](#arg---environment) : The environment to render the environment file for. Defaults to the default environment
- [`--name (-n) <NAME>`](#arg---name) : The name to use for the rendered conda environment. Defaults to the environment name
- [`--from-lockfile`](#arg---from-lockfile) : Render the environment with packages pinned to the versions resolved in the lock file instead of the manifest specs

## Global Options

- [`--manifest-path (-m) <MANIFEST_PATH>`](#arg---manifest-path) : The path to `pixi.toml`, `pyproject.toml`, or the workspace directory
- [`--workspace (-w) <WORKSPACE>`](#arg---workspace) : Name of the workspace
